MD Extensions: Remove user gesture check from updateExtensionConfiguration.

This relaxes chrome.developerPrivate updateExtensionConfiguration API to not
require a user gesture. Unfortunately a user gesture is erroneously not detected
when the user drags a toggle UI control.

Bug: 764129
Change-Id: I08f038a7406a19dd2607206fa1b59aca2bf07ce8
Reviewed-on: https://chromium-review.googlesource.com/734707
Commit-Queue: Demetrios Papadopoulos <dpapad@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511323}
Former-commit-id: 198dbc69cf3f9d5e67e00648e96d5347ba8c942c